Fix body overflow bugs

--- a/style.css
+++ b/style.css
@@ -13,8 +13,7 @@ html {
 body {
   background: rgba(0, 0, 0, .89);
   color: whitesmoke;
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
 }
